--- a/README
+++ b/README
@@ -1,1 +1,21 @@
-ANSAR git
+Sedihnyo raso
+ambo hidup sore diri
+umur sudoh tuo 
+tapi tok bini lagi
+
+nok acu cubo
+suruh saem tulun cari
+bia tadop rupo
+asal sajo baik hati
+
+sedihnyo raso ambo hidup sore diri
+umo sudoh tuo tapi tok bini lagi
+nok acu cubo suruh saem tulun cari
+bia takdop rupo asal sajo baik hati
+
+tubuh pasuke dikir
+tinggi2 jadi tuk joro
+takdir tuhe bui
+apo lagi nok dikato
+kalu tubuh ambo utuh
+bulih bini denga ore kayo
